modif vite fait de l'anim wech yoyo TAHUTAHU

--- a/partials/common/navigation.html
+++ b/partials/common/navigation.html
@@ -39,6 +39,6 @@ $(document).ready(function(){
   $('.navbar').animateCss('fadeInDown');
   $('#liseret').animateCss('slideInLeft');
   $('.navbar-header').animateCss('fadeIn');
-  $('#navbar').animateCss('slideInLeft');
+  $('#navbar').animateCss('slideInRight');
 });
 </script>
